# kindle-reading-gtk

./: .gitmodules  README.md  meson.build  meson.options
src/: daily.cpp  dataprocess.cpp  main.cpp  month.cpp  network.cpp  overview.cpp  settingsui.cpp  share.cpp  utils.cpp  week.cpp
src/include/: daily.hpp  dataprocess.hpp  month.hpp  network.hpp  overview.hpp  settingsui.hpp  share.hpp  types.hpp  utils.hpp  week.hpp
